force-app/main/default/objects/Purchase_Order__c/Purchase_Order__c.object-meta.xml
<CustomObject>
    <label>Purchase Order</label>
    <nameField>
        <displayFormat>PO-{00000}</displayFormat>
        <label>Purchase Orders Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Purchase Orders</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>