force-app/main/default/objects/Purchase_Order__c/fields/Suppliers__c.field-meta.xml
<CustomField>
    <fullName>Suppliers__c</fullName>
    <label>Suppliers</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Hirepool</fullName>
            </value>
            <value>
                <fullName>Kennards Hire</fullName>
            </value>
            <value>
                <fullName>Mico Plumbing</fullName>
            </value>
            <value>
                <fullName>Humes</fullName>
            </value>
            <value>
                <fullName>Hynds</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>